# docs2stubs

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  TODO  analyze.py  augment.py  fiximports.py  gentests.py  migrate.py  patch_networkx.sh  process.py  pyproject.toml  stub.py  test.py
analysis/: astropy.imports.map  astropy.params.map  astropy.returns.map  matplotlib.attrs.full  matplotlib.attrs.map  matplotlib.imports.map  matplotlib.params.map  matplotlib.returns.map  networkx.imports.map  networkx.params.map  networkx.returns.map  scipy.attrs.map  scipy.imports.map  scipy.params.map  scipy.returns.map  skimage.imports.map  skimage.params.map  skimage.returns.map  sklearn.attrs.map  sklearn.creturns.map  sklearn.imports.map  sklearn.params.map  sklearn.returns.map  sympy.imports.map  sympy.params.map  sympy.returns.map  vispy.params.map  vispy.returns.map
docs2stubs/: __init__.py  analyzer.py  analyzing_transformer.py  augmenting_transformer.py  base_transformer.py  basetransformer.py  docs2stubs.py  docstring_parser.py  normalize.py  parser.py  sklearn_native.py  stubber.py  stubbing_transformer.py  traces.py  type_normalizer.py  type_parser.py  utils.py
parser/: grammar.lark  make.sh  test.py  testdata.txt
tests/: test_astropy.py  test_docparse.py  test_matplotlib.py  test_normalize.py  test_parse.py  test_scikit.py
tracing/: copytests.sh  gentraces.sh  monkeytype_config.py  runallexamples_matplotlib.py  runallexamples_sklearn.py  trace.py  tracefolder.py
