[build-system]
requires = ["flit_core >=3.7,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "docs2stubs"
authors = [{name = "Graham Wheeler", email = "graham@grahamwheeler.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
dependencies = [
    "flit_core >=3.7",
    "docopt",
    "libcst",
    "black",
    "MonkeyType",
    "numpy",
    "pandas",
    "scipy",
    "lark",
]
classifiers = ["Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "PyHamcrest",
]

[project.urls]
Source = "https://github.com/gramster/docs2stubs"

[project.scripts]
docs2stubs = "docs2stubs:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
